# fiib-eina.github.io

./: .gitignore  .nojekyll  Makefile  README.md  _brand.yml  _brand_dark.yml  _brand_light.yml  _quarto.yml  esquema-del-curso.md  flake.nix  guia-docente.md  index.ejs  index.html  index.qmd  justfile  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
_extensions/tldraw/: README.md  _extension.yml
site_libs/bootstrap/: bootstrap-05f7c699e0c9e97020989e24d4bb15d3.min.css  bootstrap-100c4cfcd515b8ef67b35e8775a4d15f.min.css  bootstrap-10b2911e9f92f503ff1f246b3eff8d33.min.css  bootstrap-116479fa16b3443f59da5ce90315efd6.min.css  bootstrap-16d7392ce7bb45861cfc94efe8e874d8.min.css  bootstrap-16fe927bb3c60f206f42c1b4a6c6915e.min.css  bootstrap-173aa27aebed33cf48d3a4d6ac6cecce.min.css  bootstrap-1746c9056639678faa42c5379e5c5669.min.css  bootstrap-17f925777205d0aa6889fc8c64970179.min.css  bootstrap-257c02272021ffeeec2f6f6e4730ad23.min.css  bootstrap-257ccebb099df6346ee56a7e21a5c6f8.min.css  bootstrap-27f99c18a77ed30af57d3d807ef2c9fe.min.css  bootstrap-28e4fb05f15a304e5a3d223ec24942aa.min.css  bootstrap-28ffbf6fca2ca3d65b2793fca3a32c38.min.css  bootstrap-2baa9f4057ea31c26def5022ab5ff901.min.css  bootstrap-2e75883fac313fca9d53213cba547c43.min.css  bootstrap-2f05cadc16904c220ad717371cbab1b7.min.css  bootstrap-37b900e541e538aa6195295814caa2e7.min.css  bootstrap-3a9bc45b6cb0139a6ebb837c83b4d0ce.min.css  bootstrap-4d36a47779b12e192d7e7c7ec8b75e80.min.css  bootstrap-521fa19201990e74a5696c0784e1fc96.min.css  (+98 more)
src/: _metadata.yml
src/01_teoria/: 000_Presentación.html  (+7 more)
(+233 files in other folders)
